[tool.poetry]
name = "ptylab"
version = "0.2.1"
description = "A cross-platform, open-source inverse modeling toolbox for conventional and Fourier ptychography"
authors = ["Lars Loetgering <lars.loetgering@fulbrightmail.org>", "PtyLab Team"]
readme = "README.md"
packages = [
    { include = "PtyLab" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
numpy = ">=1.22, <2.0.0"
matplotlib = "^3.7.2"
h5py = "^3.9.0"
scipy = "^1.11.1"
scikit-image = "^0.21.0"
scikit-learn = "^1.3.0"
tqdm = "^4.65.0"
pyqtgraph = "^0.13.3"
tables = "^3.8.0"
bokeh = "^3.2.1"
tensorflow = "^2.14.0"
PyQt5 = "^5.15.10"
PyQt5-Qt5 = "*"
black = { version = "^23.7.0", optional = true }
ipykernel = { version = "^6.25.0", optional = true }
pre-commit = { version = "^4.0.1", optional = true }

[tool.poetry.extras]
dev = ["black", "ipykernel", "pre-commit"]

[tool.poetry.group.gpu-cuda11x]
optional = true

[tool.poetry.group.gpu-cuda11x.dependencies]
cupy-cuda11x = "^13.2.0"

[tool.poetry.group.gpu-cuda12x]
optional = true

[tool.poetry.group.gpu-cuda12x.dependencies]
cupy-cuda12x = "^13.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
