[project]
name = "ptylab"
version = "0.2.5"
description = "A cross-platform, open-source inverse modeling toolbox for conventional and Fourier ptychography"
authors = [
    { name = "Lars Loetgering", email = "lars.loetgering@fulbrightmail.org" },
    { name = "PtyLab Team" },
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy~=2.0",
    "matplotlib~=3.7",
    "h5py~=3.9",
    "scipy~=1.11",
    "scikit-image>=0.21.0",
    "scikit-learn~=1.3",
    "tqdm~=4.65",
    "pyqtgraph~=0.13",
    "tables~=3.8",
    "bokeh~=3.2",
    "PyQt5~=5.15",
    "ipython~=8.18",
    "ipywidgets>=8.1.8",
]

[project.optional-dependencies]
dev = [
    "black~=23.7",
    "ipykernel~=6.25",
    "pytest~=9.0",
    "imageio~=2.0",
]
gpu = ["cupy-cuda12x[ctk]"]
tensorflow = ["tensorflow~=2.14"]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocs-jupyter>=0.24",
]

[project.scripts]
ptylab = "PtyLab.utils.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.6.1,<0.11"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "PtyLab"
module-root = ""
